--- a/PyBer.ipynb
+++ b/PyBer.ipynb
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "d28d26c5",
    "metadata": {},
    "outputs": [
@@ -996,7 +996,7 @@
        "Name: ride_id, dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "11c2308a",
    "metadata": {},
    "outputs": [],
@@ -1038,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "id": "5083a60a",
    "metadata": {},
    "outputs": [
@@ -1054,7 +1054,7 @@
        "Name: fare, dtype: float64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1067,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "id": "f930a5de",
    "metadata": {},
    "outputs": [],
@@ -1097,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "id": "e4e1e772",
    "metadata": {},
    "outputs": [
@@ -1113,7 +1113,7 @@
        "Name: driver_count, dtype: float64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1126,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "id": "7d522278",
    "metadata": {},
    "outputs": [],
@@ -1170,17 +1170,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 24,
    "id": "4e54a02d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f930ffe9ca0>"
+       "<matplotlib.collections.PathCollection at 0x7f81b3ddafd0>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1224,17 +1224,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 25,
    "id": "587aa9d5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f93102859a0>"
+       "<matplotlib.legend.Legend at 0x7f81b3f75d90>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1284,17 +1284,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 26,
    "id": "79ba4476",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f930ff0c2e0>"
+       "<matplotlib.legend.Legend at 0x7f81b3fc6f40>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1344,17 +1344,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 27,
    "id": "b547aebe",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f93101c88e0>"
+       "<matplotlib.legend.Legend at 0x7f81b3ef6d90>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1406,7 +1406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 28,
    "id": "bab4aaff",
    "metadata": {},
    "outputs": [
@@ -1461,7 +1461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 29,
    "id": "2cd742e4",
    "metadata": {},
    "outputs": [
